src/LayerMount.dll/public/LayerMount.h


typedef struct LM_HANDLE__*              LM_HANDLE;
typedef struct LM_VHD_HANDLE__*          LM_VHD_HANDLE;
typedef struct LM_VSS_SNAPSHOT_HANDLE__* LM_VSS_SNAPSHOT_HANDLE;
typedef struct LM_IMAGE_HANDLE__*        LM_IMAGE_HANDLE;
typedef enum LM_VHD_KIND {
    LM_VHD_KIND_FIXED        = 0,
    LM_VHD_KIND_DYNAMIC      = 1,
    LM_VHD_KIND_DIFFERENCING = 2
} LM_VHD_KIND;
typedef enum LM_VHD_ATTACH_LIFETIME {
    LM_VHD_ATTACH_PERMANENT      = 0,
    LM_VHD_ATTACH_PROCESS_SCOPED = 1
} LM_VHD_ATTACH_LIFETIME;
typedef enum LM_COMPRESSION_TYPE {
    LM_COMPRESSION_NONE = 0,
    LM_COMPRESSION_ZSTD = 1
} LM_COMPRESSION_TYPE;
typedef struct LM_STREAM_INFO {
    WCHAR  streamName[LM_STREAM_NAME_MAX];  
    UINT64 streamSize;                      
    UINT64 allocationSize;                  
} LM_STREAM_INFO;
typedef struct LM_STATS {
    UINT64 cacheHits;
    UINT64 cacheMisses;
    UINT64 copyUpCount;
    UINT64 readCount;
    UINT64 writeCount;
    UINT64 activeHandles;
    UINT64 bytesRead;
    UINT64 bytesWritten;
    UINT64 cleanupMetadataFailureCount;
} LM_STATS;
typedef struct LM_VHD_CONFIG {
    UINT32                  structSize;
    LM_VHD_KIND            kind;
    UINT64                  sizeBytes;            
    PCWSTR                  path;                 
    PCWSTR                  parentPath;           
    BOOL                    readOnly;             
    BOOL                    suppressDriveLetter;  
    LM_VHD_ATTACH_LIFETIME lifetime;
    UINT32                  _reserved0;
} LM_VHD_CONFIG;
typedef enum LM_VHD_LAYER_TYPE {
    LM_VHD_LAYER_DIRECTORY = 0,
    LM_VHD_LAYER_VHD       = 1,
    LM_VHD_LAYER_VSS       = 2
} LM_VHD_LAYER_TYPE;
typedef struct LM_VHD_LAYER_INFO {
    WCHAR              id[64];              
    LM_VHD_LAYER_TYPE type;
    PWSTR              path;
    SIZE_T             pathChars;
    SIZE_T             pathRequired;
    PWSTR              parentId;
    SIZE_T             parentIdChars;
    SIZE_T             parentIdRequired;
    PWSTR              mountStatus;           
    SIZE_T             mountStatusChars;
    SIZE_T             mountStatusRequired;
    PWSTR              volumeGuid;
    SIZE_T             volumeGuidChars;
    SIZE_T             volumeGuidRequired;
    PWSTR              createdAt;             
    SIZE_T             createdAtChars;
    SIZE_T             createdAtRequired;
} LM_VHD_LAYER_INFO;
typedef struct LM_VSS_SNAPSHOT_INFO {
    WCHAR  id[40];              
    GUID   vssId;               
    PWSTR  volumePath;          
    SIZE_T volumePathChars;
    SIZE_T volumePathRequired;
    PWSTR  devicePath;          
    SIZE_T devicePathChars;
    SIZE_T devicePathRequired;
    BOOL   persistent;
    UINT64 createdAt;           
} LM_VSS_SNAPSHOT_INFO;
typedef struct LM_IMAGE_MANIFEST_ENTRY {
    PWSTR  imagePath;
    SIZE_T imagePathChars;
    SIZE_T imagePathRequired;
    WCHAR  checksumHex[65];     
} LM_IMAGE_MANIFEST_ENTRY;
typedef struct LM_IMAGE_MANIFEST {
    UINT32                    schemaVersion;
    UINT32                    entryCount;        
    LM_IMAGE_MANIFEST_ENTRY* entries;           
    SIZE_T                    entriesRequired;   
} LM_IMAGE_MANIFEST;
typedef struct LM_IMAGE_PACK_OPTIONS {
    UINT32 structSize;      
    UINT32 _reserved0;
    PCWSTR author;          
    PCWSTR description;     
} LM_IMAGE_PACK_OPTIONS;
typedef struct LM_IMAGE_METADATA {
    PWSTR                id;
    SIZE_T               idChars;
    SIZE_T               idRequired;
    PWSTR                parentId;        
    SIZE_T               parentIdChars;
    SIZE_T               parentIdRequired;
    PWSTR                createdAt;       
    SIZE_T               createdAtChars;
    SIZE_T               createdAtRequired;
    PWSTR                author;
    SIZE_T               authorChars;
    SIZE_T               authorRequired;
    PWSTR                description;
    SIZE_T               descriptionChars;
    SIZE_T               descriptionRequired;
    LM_COMPRESSION_TYPE compression;
    UINT64               fileCount;
    UINT64               uncompressedSize;
    UINT64               compressedSize;
} LM_IMAGE_METADATA;
typedef struct LM_MOUNT_POINT_PREP {
    BOOL   directoryCreatedByUs;  
    UINT64 volumeSerial;          
    UINT8  fileId[16];            
    UINT8  reserved[8];           
} LM_MOUNT_POINT_PREP;
LM_API HRESULT LM_CALL LayerMountPointIsDriveLetter(
    PCWSTR mountPoint, BOOL* outIsDriveLetter);
LM_API HRESULT LM_CALL LayerMountPointPrepareDirectory(
    PCWSTR mountPoint, LM_MOUNT_POINT_PREP* outPrep);
LM_API HRESULT LM_CALL LayerMountPointCaptureIdentity(
    PCWSTR mountPoint, LM_MOUNT_POINT_PREP* prep);
LM_API HRESULT LM_CALL LayerMountPointReleaseIfSafe(
    PCWSTR mountPoint, const LM_MOUNT_POINT_PREP* prep);
LM_API HRESULT LM_CALL LayerMountEnumerateStreams(
    LM_HANDLE        handle,
    PCWSTR           relativePath,
    LM_STREAM_INFO* outBuffer,
    UINT32           bufferCapacity,
    UINT32*          outCount);
LM_API HRESULT LM_CALL LayerMountVhdCreate(
    LM_HANDLE            mount,
    const LM_VHD_CONFIG* config,
    LM_VHD_HANDLE*       outVhd);
LM_API HRESULT LM_CALL LayerMountVhdOpen(
    LM_HANDLE            mount,
    const LM_VHD_CONFIG* config,
    LM_VHD_HANDLE*       outVhd);
LM_API HRESULT LM_CALL LayerMountVhdAttach(
    LM_VHD_HANDLE vhd,
    PWSTR          physicalPathBuffer,
    SIZE_T         physicalPathChars,
    SIZE_T*        physicalPathRequired);
LM_API HRESULT LM_CALL LayerMountVhdDetach(LM_VHD_HANDLE vhd);
LM_API HRESULT LM_CALL LayerMountVhdMerge(LM_VHD_HANDLE childVhd);
LM_API HRESULT LM_CALL LayerMountVhdImport(
    LM_HANDLE mount,
    PCWSTR     directoryPath,
    PCWSTR     vhdPath,
    UINT64     sizeBytes);
LM_API HRESULT LM_CALL LayerMountVhdExport(
    LM_HANDLE mount,
    PCWSTR     vhdPath,
    PCWSTR     directoryPath);
LM_API HRESULT LM_CALL LayerMountVhdClose(LM_VHD_HANDLE vhd);
LM_API HRESULT LM_CALL LayerMountVhdGetVolumeGuid(
    LM_VHD_HANDLE vhd,
    PWSTR          buffer,
    SIZE_T         bufferChars,
    SIZE_T*        requiredChars);
LM_API HRESULT LM_CALL LayerMountVhdListLayers(
    LM_HANDLE          mount,
    PCWSTR              manifestDir,
    LM_VHD_LAYER_INFO* entries,
    UINT32              entriesCapacity,
    UINT32*             entriesWritten,
    UINT32*             entriesRequired);
LM_API HRESULT LM_CALL LayerMountVhdUnregisterLayer(
    LM_HANDLE mount,
    PCWSTR     layerId,
    PCWSTR     manifestDir,     
    BOOL*      outRemoved);
LM_API HRESULT LM_CALL LayerMountVhdGetLayerMetadataJson(
    LM_HANDLE mount,
    PCWSTR     manifestDir,     
    PCWSTR     layerId,
    PWSTR      buffer,
    SIZE_T     bufferChars,
    SIZE_T*    requiredChars);
LM_API HRESULT LM_CALL LayerMountVssCreateSnapshot(
    LM_HANDLE               mount,
    PCWSTR                   volumePath,
    BOOL                     persistent,
    LM_VSS_SNAPSHOT_HANDLE* outSnapshot,
    PWSTR                    idBuffer,
    SIZE_T                   idBufferChars,
    SIZE_T*                  idRequired,
    PWSTR                    devicePathBuffer,
    SIZE_T                   devicePathBufferChars,
    SIZE_T*                  devicePathRequired);
LM_API HRESULT LM_CALL LayerMountVssDeleteSnapshot(
    LM_HANDLE mount, PCWSTR snapshotId);
LM_API HRESULT LM_CALL LayerMountVssListSnapshots(
    LM_HANDLE             mount,
    LM_VSS_SNAPSHOT_INFO* entries,
    UINT32                 entriesCapacity,
    UINT32*                entriesWritten,
    UINT32*                entriesRequired);
LM_API HRESULT LM_CALL LayerMountVssCleanupSnapshots(LM_HANDLE mount);
LM_API HRESULT LM_CALL LayerMountVssCloseSnapshot(LM_VSS_SNAPSHOT_HANDLE snapshot);
LM_API HRESULT LM_CALL LayerMountImagePack(
    LM_HANDLE                    mount,
    PCWSTR                        sourceDir,
    PCWSTR                        outputPath,
    INT32                         compressionLevel,
    const LM_IMAGE_PACK_OPTIONS* options,     
    LM_IMAGE_HANDLE*             outImage);
LM_API HRESULT LM_CALL LayerMountImagePackDifferential(
    LM_HANDLE                    mount,
    PCWSTR                        sourceDir,
    PCWSTR                        baseDir,
    PCWSTR                        outputPath,
    INT32                         compressionLevel,
    const LM_IMAGE_PACK_OPTIONS* options,     
    LM_IMAGE_HANDLE*             outImage);
LM_API HRESULT LM_CALL LayerMountImageCreateManifest(
    LM_HANDLE    mount,
    PCWSTR        outputPath,
    const PCWSTR* imagePaths,
    UINT32        imageCount);
LM_API HRESULT LM_CALL LayerMountImageUnpack(
    LM_HANDLE mount,
    PCWSTR     imagePath,
    PCWSTR     targetDir,
    BOOL       verifyChecksum);
LM_API HRESULT LM_CALL LayerMountImageValidate(
    LM_HANDLE mount, PCWSTR imagePath);
LM_API HRESULT LM_CALL LayerMountImageGetManifest(
    LM_HANDLE          mount,
    PCWSTR              imagePath,
    LM_IMAGE_MANIFEST* manifest);
LM_API HRESULT LM_CALL LayerMountImageGetMetadata(
    LM_HANDLE          mount,
    PCWSTR              imagePath,
    LM_IMAGE_METADATA* metadata);
LM_API HRESULT LM_CALL LayerMountImageClose(LM_IMAGE_HANDLE image);
LM_API HRESULT LM_CALL LayerMountGetStats(
    LM_HANDLE handle, LM_STATS* outStats);
LM_API HRESULT LM_CALL LayerMountProcessTrackerEnable(
    LM_HANDLE handle, BOOL enable);
LM_API HRESULT LM_CALL LayerMountProcessTrackerSetRules(
    LM_HANDLE handle, PCWSTR rulesPath);
LM_API HRESULT LM_CALL LayerMountProcessTrackerExportJson(
    LM_HANDLE handle,
    PWSTR      buffer,
    SIZE_T     bufferChars,
    SIZE_T*    requiredChars);
LM_API HRESULT LM_CALL LayerMountProcessTrackerExportCsv(
    LM_HANDLE handle,
    PWSTR      buffer,
    SIZE_T     bufferChars,
    SIZE_T*    requiredChars);