src/LayerMount.NET/Interop/NativeMethods.cs


    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountEnumerateStreams(
        IntPtr           handle,
        string           relativePath,
        LM_STREAM_INFO* outBuffer,
        uint             bufferCapacity,
        uint*            outCount);

    // --------------------------------------------------------------------
    // VHD primitives
    // --------------------------------------------------------------------

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdCreate(
        IntPtr mount, LM_VHD_CONFIG* config, IntPtr* outVhd);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdOpen(
        IntPtr mount, LM_VHD_CONFIG* config, IntPtr* outVhd);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdAttach(
        IntPtr vhd,
        char*  physicalPathBuffer,
        nuint  physicalPathChars,
        nuint* physicalPathRequired);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdDetach(IntPtr vhd);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdMerge(IntPtr childVhd);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdImport(
        IntPtr mount,
        string directoryPath,
        string vhdPath,
        ulong  sizeBytes);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdExport(
        IntPtr mount,
        string vhdPath,
        string directoryPath);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdClose(IntPtr vhd);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdGetVolumeGuid(
        IntPtr vhd,
        char*  buffer,
        nuint  bufferChars,
        nuint* requiredChars);

    // manifestDir is PCWSTR; may be NULL (use cwd). Use IntPtr so callers
    // can pass IntPtr.Zero for NULL without a special-case signature.
    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdListLayers(
        IntPtr              mount,
        IntPtr              manifestDir,   // PCWSTR; IntPtr.Zero = NULL
        LM_VHD_LAYER_INFO* entries,
        uint                entriesCapacity,
        uint*               entriesWritten,
        uint*               entriesRequired);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdUnregisterLayer(
        IntPtr mount,
        string layerId,
        IntPtr manifestDir,   // PCWSTR; IntPtr.Zero = NULL
        int*   outRemoved);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVhdGetLayerMetadataJson(
        IntPtr mount,
        IntPtr manifestDir,   // PCWSTR; IntPtr.Zero = NULL
        string layerId,
        char*  buffer,
        nuint  bufferChars,
        nuint* requiredChars);

    // --------------------------------------------------------------------
    // VSS primitives
    // --------------------------------------------------------------------

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVssCreateSnapshot(
        IntPtr  mount,
        string  volumePath,
        int     persistent,
        IntPtr* outSnapshot,
        char*   idBuffer,
        nuint   idBufferChars,
        nuint*  idRequired,
        char*   devicePathBuffer,
        nuint   devicePathBufferChars,
        nuint*  devicePathRequired);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVssDeleteSnapshot(
        IntPtr mount, string snapshotId);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVssListSnapshots(
        IntPtr                 mount,
        LM_VSS_SNAPSHOT_INFO* entries,
        uint                   entriesCapacity,
        uint*                  entriesWritten,
        uint*                  entriesRequired);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVssCleanupSnapshots(IntPtr mount);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountVssCloseSnapshot(IntPtr snapshot);

    // --------------------------------------------------------------------
    // Layer image primitives
    // --------------------------------------------------------------------

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImagePack(
        IntPtr                  mount,
        string                  sourceDir,
        string                  outputPath,
        int                     compressionLevel,
        LM_IMAGE_PACK_OPTIONS* options,
        IntPtr*                 outImage);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImagePackDifferential(
        IntPtr                  mount,
        string                  sourceDir,
        string                  baseDir,
        string                  outputPath,
        int                     compressionLevel,
        LM_IMAGE_PACK_OPTIONS* options,
        IntPtr*                 outImage);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImageCreateManifest(
        IntPtr  mount,
        string  outputPath,
        IntPtr* imagePaths,    // PCWSTR const* -- caller builds the char** block
        uint    imageCount);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImageUnpack(
        IntPtr mount,
        string imagePath,
        string targetDir,
        int    verifyChecksum);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImageValidate(
        IntPtr mount, string imagePath);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImageGetManifest(
        IntPtr              mount,
        string              imagePath,
        LM_IMAGE_MANIFEST* manifest);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImageGetMetadata(
        IntPtr              mount,
        string              imagePath,
        LM_IMAGE_METADATA* metadata);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountImageClose(IntPtr image);

    // --------------------------------------------------------------------
    // Diagnostics, eventing, process tracker
    // --------------------------------------------------------------------

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountGetStats(
        IntPtr handle, LM_STATS* outStats);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountProcessTrackerEnable(
        IntPtr handle, int enable);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountProcessTrackerSetRules(
        IntPtr handle, string rulesPath);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountProcessTrackerExportJson(
        IntPtr handle,
        char*  buffer,
        nuint  bufferChars,
        nuint* requiredChars);

    [LibraryImport(DllName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountProcessTrackerExportCsv(
        IntPtr handle,
        char*  buffer,
        nuint  bufferChars,
        nuint* requiredChars);

    // --------------------------------------------------------------------
    // Host-helper mount-point primitives. Promoted into LayerMount.dll
    // by commit 21190d2 ("refactor: promote WindowsMountPoint into
    // LayerMount.dll as host helper"); host-flavor-agnostic and stateless,
    // so they hang off LayerMount.MountPoint (static) rather than any
    // LM_HANDLE.
    // --------------------------------------------------------------------

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountPointIsDriveLetter(
        string mountPoint, int* outIsDriveLetter);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountPointPrepareDirectory(
        string mountPoint, LM_MOUNT_POINT_PREP* outPrep);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountPointCaptureIdentity(
        string mountPoint, LM_MOUNT_POINT_PREP* prep);

    [LibraryImport(DllName, StringMarshalling = StringMarshalling.Utf16)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvStdcall)])]
    internal static partial int LayerMountPointReleaseIfSafe(
        string mountPoint, LM_MOUNT_POINT_PREP* prep);
}
